--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                     <div class="about-upper-sec-img col-lg-6 col-12 mb-lg-0 mb-5">
 
-                        <img src="/images/img/img-1.png" alt="food image" class="rounded-3 w-100">
+                        <img src="images/img/img-1.png" alt="food image" class="rounded-3 w-100">
 
                     </div>
 
