--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                     <div class="about-upper-sec-img col-lg-6 col-12 mb-lg-0 mb-5">
 
-                        <img src="/images/img/img-1.png" alt="food image" class="rounded-3 w-100">
+                        <img src="images/img/img-1.png" alt="food image" class="rounded-3 w-100">
 
                     </div>
 
@@ -278,7 +278,7 @@
 
                     <div class="about-lower-sec-img col-lg-6 col-12">
 
-                        <img src="/images/img/img-2.png" alt="food image" class="rounded-3 w-100">
+                        <img src="images/img/img-2.png" alt="food image" class="rounded-3 w-100">
 
                     </div>
 
@@ -354,7 +354,7 @@
 
                         <div class="food-menu-img mb-2">
 
-                            <img src="/images/img/img-3.jpg" alt="">
+                            <img src="images/img/img-3.jpg" alt="">
 
                         </div>
 
@@ -390,7 +390,7 @@
 
                         <div class="food-menu-img mb-2">
 
-                            <img src="/images/img/img-5.jpg" alt="">
+                            <img src="images/img/img-5.jpg" alt="">
 
                         </div>
 
@@ -426,7 +426,7 @@
 
                         <div class="food-menu-img mb-2">
 
-                            <img src="/images/img/img-9.jpg" alt="">
+                            <img src="images/img/img-9.jpg" alt="">
 
                         </div>
 
@@ -469,7 +469,7 @@
 
                         <div class="food-menu-img mb-2">
 
-                            <img src="/images/img/img-6.jpg" alt="">
+                            <img src="images/img/img-6.jpg" alt="">
 
                         </div>
 
@@ -505,7 +505,7 @@
 
                         <div class="food-menu-img mb-2">
 
-                            <img src="/images/img/img-7.jpg" alt="">
+                            <img src="images/img/img-7.jpg" alt="">
 
                         </div>
 
@@ -541,7 +541,7 @@
 
                         <div class="food-menu-img mb-2">
 
-                            <img src="/images/img/img-8.jpg" alt="">
+                            <img src="images/img/img-8.jpg" alt="">
 
                         </div>
 
@@ -611,7 +611,7 @@
 
                     <div class="carousel-item active text-center py-lg-5 py-3 bg-white rounded-3">
 
-                        <img src="/images/review/review-1.jpg  " alt="" class="rounded-circle mb-3"
+                        <img src="images/review/review-1.jpg  " alt="" class="rounded-circle mb-3"
                             aria-colspan="">
 
                         <p>"The Best Food I Have I Tried Till Now,<br> The Food Quality And Taste Of The Food Is Far
@@ -624,7 +624,7 @@
 
                     <div class="carousel-item rounded-2 text-center py-lg-5 py-3 bg-white rounded-3">
 
-                        <img src="/images/review/review-2.jpg  " alt="" class="rounded-circle mb-3">
+                        <img src="images/review/review-2.jpg  " alt="" class="rounded-circle mb-3">
 
                         <p>"The Best Food I Have I Tried Till Now,<br> The Food Quality And Taste Of The Food Is Far
                             Better Than Any Other Restaurant"</p>
@@ -635,7 +635,7 @@
 
                     <div class="carousel-item rounded-2 text-center py-lg-5 py-3 bg-white rounded-3">
 
-                        <img src="/images/review/review-3.jpg  " alt="" class="rounded-circle mb-3 ">
+                        <img src="images/review/review-3.jpg  " alt="" class="rounded-circle mb-3 ">
 
                         <p>"The Best Food I Have I Tried Till Now,<br> The Food Quality And Taste Of The Food Is Far
                             Better Than Any Other Restaurant"</p>
